# grbsens

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
CTA-sensitivity/: ReadSensi.py  note.txt  runShJobs.py  sensi-5sigma_obstime-610s_irf-North_z20_0.5h.txt  sensi.py  sensitivity-5sigma_irf-North_z20_0.5.txt
EBL/: EBL.ipynb  SEDestimation_EBLTauFitscopy.c  powerlaw.xml  tau_dominguez10.out  tau_franceschini08.out
fix_fits/: Comparing_Fits.ipynb  csadd2caldb_jg.py
grbsens/: csadd2caldb.py  ebl.py  grb.py  grbsens.py  setup.py
notebooks/: Testing cssens.ipynb  Testing package.ipynb  grbsens tutorial.ipynb
notebooks/.ipynb_checkpoints/: Exploring GRBs-checkpoint.ipynb  Testing cssens-checkpoint.ipynb  Testing package-checkpoint.ipynb  grb-checkpoint.xml  grbsens tutorial-checkpoint.ipynb
notebooks/outputs/: sensi-5.0sigma_obstime-10.0_irf-North_0.5h.txt  sensi-5.0sigma_obstime-100.0_irf-North_0.5h.txt  sensi-5.0sigma_obstime-1000.0_irf-North_0.5h.txt  sensi-5.0sigma_obstime-10000.0_irf-North_0.5h.txt  sensi-5.0sigma_obstime-11.0_irf-North_0.5h.txt  sensi-5.0sigma_obstime-12.0_irf-North_0.5h.txt  sensi-5.0sigma_obstime-13.0_irf-North_0.5h.txt  sensi-5.0sigma_obstime-14.0_irf-North_0.5h.txt  sensi-5.0sigma_obstime-2.0_irf-North_0.5h.txt  sensi-5.0sigma_obstime-24.0_irf-North_0.5h.txt  sensi-5.0sigma_obstime-3.0_irf-North_0.5h.txt  sensi-5.0sigma_obstime-4.0_irf-North_0.5h.txt  sensi-5.0sigma_obstime-5.0_irf-North_0.5h.txt  sensi-5.0sigma_obstime-6.0_irf-North_0.5h.txt  sensi-5.0sigma_obstime-7.0_irf-North_0.5h.txt  (+2 more)
(+2 files in other folders)
