[tool.poetry]
name = "grbsens"
version = "0.5"
description = ""
authors = ["Jarred Green <astrojarred@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.0"
astropy = "^5.0"
tqdm = "^4.62.3"
numpy = "^1.22.1"
ipykernel = "^6.15.1"
scipy = "^1.9.0"
matplotlib = "^3.5.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.7.0"
ipython = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
